--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,14 @@ on:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+    branches:
+      - main
   pull_request:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+    branches:
+      - main
 
 jobs:
   test:
