--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "lint": "eslint . --ext .js --ext .ts",
     "lint:fix": "eslint . --ext .js --ext .ts --fix",
     "package": "npm run build && npm pack",
+    "prepublishOnly": "pinst --disable",
     "postinstall": "husky install",
+    "postpublish": "pinst --enable",
     "test": "jest --no-cache --runInBand",
     "test:cov": "jest --coverage --no-cache --runInBand"
   },
@@ -86,6 +88,7 @@
     "jest-extended": "^4.0.2",
     "nock": "^13.5.4",
     "node-mocks-http": "^1.14.1",
+    "pinst": "^3.0.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   },
