--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,8 @@
   "tabWidth": 2,
   "printWidth": 120,
   "singleQuote": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "bracketSpacing": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "printWidth": 120
 }
