--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "test": "jest --no-cache --runInBand",
     "test:cov": "jest --coverage --no-cache --runInBand"
   },
+  "peerDependencies": {
+    "express": ">=4.0.0"
+  },
   "devDependencies": {
     "@types/async-retry": "^1.4.8",
     "@types/express": "^4.17.21",
@@ -83,6 +86,7 @@
     "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "express": "^4.21.2",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
@@ -95,7 +99,6 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "axios": "^1.8.4",
-    "express": "^4.21.1",
     "iron-webcrypto": "^1.2.1",
     "uncrypto": "^0.1.3"
   }
