--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wristband/express-auth",
   "description": "SDK for integrating your ExpressJS application with Wristband. Handles user authentication and token management.",
   "author": "Wristband",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "license": "MIT",
   "private": false,
   "homepage": "https://wristband.dev",
@@ -67,14 +67,17 @@
     "test": "jest --no-cache --runInBand",
     "test:cov": "jest --coverage --no-cache --runInBand"
   },
+  "peerDependencies": {
+    "express": ">=4.0.0"
+  },
   "devDependencies": {
     "@types/async-retry": "^1.4.8",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-node": "^4.1.0",
@@ -83,19 +86,19 @@
     "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "express": "^4.21.2",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "nock": "^13.5.4",
     "node-mocks-http": "^1.14.1",
     "pinst": "^3.0.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.2"
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
     "axios": "^1.8.4",
-    "express": "^4.21.1",
     "iron-webcrypto": "^1.2.1",
     "uncrypto": "^0.1.3"
   }
