--- a/jest.config.json
+++ b/jest.config.json
@@ -3,5 +3,8 @@
   "preset": "ts-jest",
   "roots": ["<rootDir>"],
   "setupFilesAfterEnv": ["jest-extended/all"],
-  "testEnvironment": "node"
+  "testEnvironment": "node",
+  "moduleNameMapper": {
+    "^../types/express$": "<rootDir>/src/types/express.d.ts"
+  }
 }
