--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wristband/express-auth",
   "description": "SDK for integrating your ExpressJS application with Wristband. Handles user authentication, session management, and token management.",
   "author": "Wristband",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "license": "MIT",
   "private": false,
   "homepage": "https://wristband.dev",
@@ -33,11 +33,22 @@
       "require": "./dist/cjs/session.js",
       "import": "./dist/esm/session.js",
       "default": "./dist/esm/session.js"
+    },
+    "./jwt": {
+      "types": "./dist/types/jwt.d.ts",
+      "require": "./dist/cjs/jwt.js",
+      "import": "./dist/esm/jwt.js",
+      "default": "./dist/esm/jwt.js"
     }
   },
   "typesVersions": {
     "*": {
-      "session": ["./dist/types/session.d.ts"]
+      "session": [
+        "./dist/types/session.d.ts"
+      ],
+      "jwt": [
+        "./dist/types/jwt.d.ts"
+      ]
     }
   },
   "files": [
@@ -84,10 +95,9 @@
     "express": ">=4.0.0"
   },
   "devDependencies": {
-    "@types/async-retry": "^1.4.8",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.19.25",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.1",
@@ -98,7 +108,7 @@
     "eslint-plugin-jest-extended": "^2.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "express": "^4.21.2",
+    "express": "^5.2.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
@@ -109,9 +119,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@wristband/typescript-jwt": "^0.2.3",
     "@wristband/typescript-session": "^0.1.0",
-    "async-retry": "^1.3.3",
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "iron-webcrypto": "^1.2.1",
     "uncrypto": "^0.1.3"
   }
